<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="detailed_forecast"></string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">Forecast</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="location_city">City name</string>
    <string name="location_city_key">city_name</string>
    <string name="location_country_key">country_code</string>
    <string name="default_city_name">Kirovohrad</string>
    <string name="default_country_code">UA</string>
    <string name="location_country_code">Country code</string>
    <string name="measuring_units">Temperature units</string>
    <string name="metric_units">Metric units</string>
    <string name="metric_units_value">metric</string>
    <string name="imperial_units">Imperial units</string>
    <string name="imperial_units_value">imperial</string>
    <string name="temperature_units_key">temperature_key</string>
    <string name="default_temperature_units">metric</string>

    <!-- Menu -->
    <string name="action_location_on_map">Show on map</string>

    <!-- Social menu -->
    <string name="action_share">Share</string>
    <string name="action_share_to_last_one">Share last</string>


</resources>
